<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.LoginFragment">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textColor="@color/text"
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:gravity="left"
            android:text="@string/server_host_label" />

        <EditText
            android:id="@+id/input_server_host"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:textColor="@color/text"
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:gravity="left"
            android:text="@string/server_port_label" />

        <EditText
            android:id="@+id/input_server_port"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:textColor="@color/text"
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:gravity="left"
            android:text="@string/username_label" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:textColor="@color/text"
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:gravity="left"
            android:text="@string/password_label" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:textColor="@color/text"
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:gravity="left"
            android:text="@string/first_name_label" />

        <EditText
            android:id="@+id/input_first_name"
            android:layout_width="170dp"
            android:layout_height="wrap_content"

            android:inputType="text" />

        <TextView
            android:textColor="@color/text"
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:gravity="left"
            android:text="@string/last_name_label" />

        <EditText
            android:id="@+id/input_last_name"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:inputType="text" />

        <TextView
            android:textColor="@color/text"
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:gravity="left"
            android:text="@string/email_label" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:textColor="@color/text"
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/gender_label" />

        <RadioGroup
            android:id="@+id/login_radio_group"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:textColor="@color/text"
                android:id="@+id/radio_female"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/gender_female" />

            <RadioButton
                android:textColor="@color/text"
                android:id="@+id/radio_male"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/gender_male" />

        </RadioGroup>


        <Button
            android:textColor="@color/text"
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/login_button" />

        <Button
            android:textColor="@color/text"
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/register_button" />
    </GridLayout>
</android.support.constraint.ConstraintLayout>